# receiving_app

./: .conformance-banned.example  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEBT.md  MUTATION.md  README.md  __main__.py  config.py  pyproject.toml  refresh_runner.py  robot_runner.py  scanner_runner.py
.github/workflows/: ci.yml
adapters/: board.py  db.py  printer.py  receiver.py  scanner.py  sink.py  source.py  sync_status_db.py
adapters/ui/: controller.py  scan_states.py  scanner_ui.py
core/: errors.py  logging_setup.py  matching.py  ports.py  schema.py
docs/: FOR_DEVELOPERS.md  GETTING_STARTED.md  GLOSSARY.md  RUNBOOK.md
docs/adr/: 0001-dual-browser-automation.md
docs/images/: README.md
schema/: 0002_claim_and_serial.sql  0003_barcode_model_map.sql  0004_sync_status.sql
scripts/: conformance.py  mutation_score.py
services/: populate.py  receive.py  receive_sync.py  refresh.py  sync.py
test_data/: pos.json
tests/: test_barcode_map.py  test_board.py  test_board_contract.py  test_config.py  test_config_dotenv_search.py  test_conformance_gate_a.py  test_controller.py  test_db.py  test_factories.py  test_logging_setup.py  test_matching.py  test_populate.py  test_printer.py  test_printer_contract.py  test_receive.py  test_receive_already_scanned.py  test_receive_atomicity.py  test_receive_rescan.py  test_receive_sync.py  test_receiver.py  test_refresh.py  test_refresh_runner.py  test_robot_escalation.py  test_robot_runner.py  test_scan_states.py  test_scanner.py  test_scanner_manual.py  test_scanner_ui_logic.py  test_schema.py  test_sequence_matcher.py  test_sink.py  test_sink_contract.py  test_source.py  test_source_contract.py  test_source_csv_headers.py  test_sync.py  test_sync_status_db.py
tests/fakes/: fake_db.py  fake_printer.py  fake_source.py
