[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "receiving-app"
version = "0.1.0"
description = "Generic warehouse receiving application"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv",
    "pywin32; sys_platform == 'win32'",
    "playwright",
    "selenium",
    "requests",
]

[project.optional-dependencies]
dev = [
    "ruff==0.9.0",
    "mypy>=1.10",
    "import-linter>=2.1",
    "pytest>=8",
    "pytest-cov>=5",
    "mutmut>=3.6",
    "pre-commit>=3.7",
]

[project.scripts]
receiving-app = "scanner_runner:main"
receiving-refresh = "refresh_runner:main"
receiving-robot = "robot_runner:main"

[tool.setuptools]
py-modules = ["config", "refresh_runner", "robot_runner", "scanner_runner"]

[tool.setuptools.packages.find]
include = ["core*", "services*", "adapters*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PLR0915"]

[tool.ruff.lint.pylint]
max-statements = 50

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "scripts"]

[tool.coverage.run]
source = ["core", "services", "config"]
omit = [
    "tests/*",
    "*/__pycache__/*",
    "__main__.py",
    "adapters/ui/*",
]

[tool.coverage.report]
show_missing = true

[tool.mutmut]
# Mutate only core/ and services/ — adapters are live-only, low value to mutate.
source_paths = ["core", "services"]
# Copy everything tests need to run inside the mutants/ sandbox.
also_copy = ["adapters", "config.py", "scripts"]
# Run only the tests that exercise core/services logic; adapter integration tests
# are excluded here because they need real infrastructure and would all fail anyway.
pytest_add_cli_args_test_selection = [
    "tests/test_schema.py",
    "tests/test_matching.py",
    "tests/test_logging_setup.py",
    "tests/test_sync.py",
    "tests/test_receive.py",
    "tests/test_receive_already_scanned.py",
    "tests/test_receive_rescan.py",
    "tests/test_receive_atomicity.py",
    "tests/test_receive_sync.py",
    "tests/test_populate.py",
    "tests/test_refresh.py",
]

[tool.importlinter]
root_packages = ["core", "services", "adapters"]

[[tool.importlinter.contracts]]
name = "core cannot import services or adapters"
type = "forbidden"
source_modules = ["core"]
forbidden_modules = ["services", "adapters"]

[[tool.importlinter.contracts]]
name = "services cannot import adapters"
type = "forbidden"
source_modules = ["services"]
forbidden_modules = ["adapters"]

[[tool.importlinter.contracts]]
name = "adapters cannot import services"
type = "forbidden"
source_modules = ["adapters"]
forbidden_modules = ["services"]
